# algo

./: Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: check.sh
src/: bst.rs  lib.rs  sort.rs  string.rs
src/bst/: binary_heap.rs  fenwick_tree.rs  segment_tree.rs
src/sort/: bubble.rs  heap.rs  merge.rs  quick.rs
src/string/: kmp.rs  prefix_function.rs  suffix_automaton.rs  trie.rs  z_function.rs
