[package]
name = "algo"
version = "0.1.0"
edition = "2021"
categories = ["algorithms"]
description = "Collection of useful algorithms."
keywords = ["algorithms"]
authors = ["Stanislav Goriainov <stangoryainov@gmail.com>"]
rust-version = "1.70.0"

[features]
default = [
    "string",
    "geometry",
    "number_theory",
]

string = [
    "z_function",
    "prefix_function",
    "kmp",
    "rabin_karp",
    "trie",
    "aho_corasick",
    "suffix_automaton",
]

z_function = []
prefix_function = []
kmp = ["prefix_function"] # knuth morris pratt
rabin_karp = []
trie = []
aho_corasick = []
suffix_automaton = []

number_theory = [
    "euclidean",
    "eratosthenes",
    "fft",
]

euclidean = []
eratosthenes = []
fft = []

geometry = [
    "vec",
    "line_segment",
    "convex_hull",
    "minkowski",
]

vec = []
line_segment = ["vec"]
convex_hull = []
minkowski = []
