[package]
name = "algo"
version = "0.1.0"
edition = "2021"
categories = ["algorithms"]
description = "Collection of useful algorithms."
keywords = ["algorithms"]
authors = ["Stanislav Goriainov <stangoryainov@gmail.com>"]
rust-version = "1.70.0"

[features]
default = [
    "string",
    "bst",
]

string = [
    "z_function",
    "prefix_function",
    "kmp",
    "trie",
    "suffix_automaton",
]

z_function = []
prefix_function = []
kmp = ["prefix_function"] # knuth morris pratt
trie = []
suffix_automaton = []

bst = [
    "segment_tree",
]

segment_tree = []

[dependencies]
num = "0.4.0"
